2008-06-27 Fixed tick positioning bug - MM

2008-06-27 Fix dashed text bug where text was at the wrong end of the
           dash - MGD

2008-06-26 Fix mathtext bug for expressions like $x_{\leftarrow}$ - MGD

2008-06-26 Fix direction of horizontal/vertical hatches - MGD

2008-06-25 Figure.figurePatch renamed Figure.patch, Axes.axesPatch
           renamed Axes.patch, Axes.axesFrame renamed Axes.frame,
           Axes.get_frame, which returns Axes.patch, is deprecated.
           Examples and users guide updated - JDH

2008-06-25 Fix rendering quality of pcolor - MGD

=================================================================
2008-06-24 Released 0.98.2 at svn r5667 - (source only for debian) JDH

2008-06-24 Added "transparent" kwarg to savefig. - MGD

2008-06-24 Applied Stefan's patch to draw a sinle centered marker over
           a line with numpoints==1 - JDH

2008-06-23 Use splines to render circles in scatter plots - MGD

===============================================================
2008-06-22 Released 0.98.1 at revision 5637

2008-06-22 Removed axes3d support and replaced it with a
           NotImplementedError for one release cycle

2008-06-21 fix marker placement bug in backend_ps - DSD

2008-06-20 [ 1978629 ] scale documentation missing/incorrect for log - MGD

2008-06-20 Added closed kwarg to PolyCollection.  Fixes bug [ 1994535
           ] still missing lines on graph with svn (r 5548). - MGD

2008-06-20 Added set/get_closed method to Polygon; fixes error
           in hist - MM

2008-06-19 Use relative font sizes (e.g. 'medium' and 'large') in
           rcsetup.py and matplotlibrc.template so that text will
           be scaled by default when changing rcParams['font.size'] -
           EF

2008-06-17 Add a generic PatchCollection class that can contain any
           kind of patch. - MGD

2008-06-13 Change pie chart label alignment to avoid having labels
           overwrite the pie - MGD
